# BlobEngine

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Blob.py  BlobBlender.py  BlobEngine.kdev4  CMakeLists.txt  README.md  ShaderGenerator.go  geogebra-export.ggb  imgui.ini  line.ggb  point.ggb
BlobEngine/src/BlobGL/: CMakeLists.txt  Form.cpp  FrameBufferObject.cpp  Graphic.cpp  Renderable.cpp  ShaderProgram.cpp  Shape.cpp  Text.cpp  Texture.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
Bomberman/src/: CMakeLists.txt  Client.cpp  GameMenu.cpp  Server.cpp  main.cpp
Bomberman/src/BomberBlob/: Bomb.cpp  BombManager.cpp  BomberBlob.cpp  Bonus.cpp  Box.cpp  ContactListener.cpp  DynamicCircle.cpp  Explosion.cpp  GameMenu.cpp  IndestructibleBox.cpp  InfoBar.cpp  Player.cpp  StaticCircle.cpp  StaticRect.cpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h  (+2 more)
libs/glad/src/: CMakeLists.txt  gl.c  glad.c  vulkan.c
libs/imgui/: imconfig.h
libs/imguiConfig/: imconfigUser.h
libs/libbmpread/: CMakeLists.txt
libs/libbmpread/src/: CMakeLists.txt  bmpread.c
shaders/: CMakeLists.txt  build.fish  f_colorArray.sc  f_colorUniform.sc  frag.glsl  geom.glsl  normal.geom  normal.vert  v_normal.sc  varying.def.sc  vert.glsl  water.geom  water.vert
shaders/include/shaders/: f_colorArray.h  f_colorUniform.h  fs_ocornut_imgui.h  v_normal.h  vs_ocornut_imgui.h
src/: AssetManager.cpp  BlobException.cpp  Buffer.cpp  CMakeLists.txt  CollisionClass.cpp  CollisionClass.hpp  Color.cpp  Context.cpp  Controls.cpp  FileReader.cpp  GLFW.cpp  Geometrie.cpp  Geometrie.hpp  ImGUI.cpp  ImGui.cpp  ImGuiContext.cpp  Image.cpp  Material.cpp  Materials.cpp  Mesh.cpp  Movable.cpp  Primitive.cpp  ProjectionTransform.cpp  RenderOptions.cpp  Renderable.cpp  SDL2.cpp  Scene.cpp  Shader.cpp  Shaders.cpp  Shape.cpp  Shapes.cpp  Texture.cpp  Time.cpp  VertexBuffer.cpp  VertexLayout.cpp  ViewTransform.cpp  Window.cpp  WindowCore.cpp
src/BlobEngine/: CMakeLists.txt  Shape.cpp
src/BlobEngine/BlobGL/: Buffer.cpp  CMakeLists.txt  Form.cpp  Graphic.cpp  Movable.cpp  Renderable.cpp  Scene.cpp  ShaderProgram.cpp  Shape.cpp  Texture.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
src/BlobEngine/FileReader/: FileReader.cpp
src/BlobEngine/Reader/: CMakeLists.txt  JsonExplorer.cpp
src/BlobEngine/collision/: CMakeLists.txt  CollisionDetector.cpp  CollisionDetectorException.cpp  Hit.cpp
src/BlobEngine/geometrie/: CMakeLists.txt  Mat2.cpp  Rectangle.cpp
src/BlobEngine/glTF2/: Accessor.cpp  Buffer.cpp  BufferView.cpp  CMakeLists.txt  Loader.cpp  Mesh.cpp  Scene.cpp  SceneManager.cpp  Shape.cpp
src/BlobGL/: CMakeLists.txt  Form.cpp  FrameBufferObject.cpp  Graphic.cpp  Movable.cpp  Renderable.cpp  Scene.cpp  ShaderProgram.cpp  Shape.cpp  Shapes.cpp  Text.cpp  Texture.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
src/Box2D/: CMakeLists.txt
src/Box2D/Common/: b2BlockAllocator.cpp
src/Collision/: CMakeLists.txt  Circle.cpp  Form.cpp  Forms.cpp  Line.cpp  Point.cpp  Polygon.cpp  Rectangle.cpp
src/Core/: Buffer.cpp  CMakeLists.txt  Controls.cpp  Image.cpp  Material.cpp  Mesh.cpp  Primitive.cpp  RenderOptions.cpp  Scene.cpp  Shader.cpp  Shape.cpp  Texture.cpp  Window.cpp
src/FileReader/: CMakeLists.txt  FileReader.cpp
src/GL/: CMakeLists.txt  Core.cpp  FrameBuffer.cpp  FrameBufferObject.cpp  Graphic.cpp  Material.cpp  Movable.cpp  Renderable.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  Shape.cpp  Shapes.cpp  Texture.cpp  Types.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  Window.cpp
src/Geometry/: CMakeLists.txt  Circle.cpp  Line.cpp  Point.cpp  Rectangle.cpp
src/Reader/: CMakeLists.txt  FileReader.cpp  JsonExplorer.cpp
src/SDL2/: CMakeLists.txt  Controls.cpp  Window.cpp
src/VK/: Buffer.cpp  CMakeLists.txt  CommandBuffer.cpp  CommandPool.cpp  DescriptorSetLayout.cpp  Device.cpp  DeviceMemory.cpp  Framebuffer.cpp  Image.cpp  ImageView.cpp  Instance.cpp  PhysicalDevice.cpp  Pipeline.cpp  PipelineLayout.cpp  QueueFamily.cpp  RenderPass.cpp  Semaphore.cpp  Swapchain.cpp  Window.cpp  model.cpp  pipeline.cpp
src/collision/: CMakeLists.txt  CollisionDetector.cpp  CollisionDetectorException.cpp  Hit.cpp
src/geometrie/: CMakeLists.txt  Circle.cpp  Line.cpp  Mat2.cpp  ModelTransform.cpp  ProjectionTransform.cpp  Rectangle.cpp  ViewTransform.cpp
src/glTF2/: Accessor.cpp  Asset.cpp  Buffer.cpp  BufferView.cpp  CMakeLists.txt  Image.cpp  Material.cpp  Mesh.cpp  Node.cpp  Sampler.cpp  Scene.cpp  SceneManager.cpp  Shape.cpp  Texture.cpp
src/glad/: glad.c
src/graphic/: CMakeLists.txt  Graphic.cpp  Shape.cpp
src/graphic/BlobGL/: CMakeLists.txt  Graphic.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
src/graphic/glTF2/: CMakeLists.txt  GlTFreader.cpp  JsonExplorer.cpp  Loader.cpp  Object.cpp
test/: BlobGLtest.cpp  Box2DTest.cpp  CMakeLists.txt  CollisionTest.cpp  CppParser.cpp  GraphicTest.cpp  HitTest.cpp  NewFonctionTest.cpp  OpenGLtest.cpp  SDLGraphicTest.cpp  SFMLGraphicTest.cpp  TestAsset.cpp  TestCollision.cpp  TestColor.cpp  TestFileReader.cpp  TestGL.cpp  TestImGUI.cpp  TestModules.cpp  TestNanovg.cpp  TestSDL.cpp  TestShaders.cpp  TestShapes.cpp  TestWindowCore.cpp  Testentt.cpp  TestglFW.cpp  TestglTF2.cpp  TilemapCollisionTest.cpp  glTF2test.cpp  imguiTest.cpp  test.cpp
test/BlenderExporter/: CMakeLists.txt  TestBlenderExporter.cpp  blenderTest.blend
test/BlenderExporter/blenderTest/: CMakeLists.txt
test/Collision/: CMakeLists.txt  TestCollision.cpp  TestFormResolution.cpp  TestForms.cpp
test/Collision/polygon_triangulate/: CMakeLists.txt  polygon_triangulate.cpp  polygon_triangulate.hpp
test/Core/: CMakeLists.txt  TestDynamicDrawCallList.cpp
test/GL/: CMakeLists.txt  TestCore.cpp  TestGLFW.cpp  TestShader.cpp  TestTexture.cpp
test/Geometrie/: CMakeLists.txt  TestFastInverse.c
test/Maths/: CMakeLists.txt  TestMVP.cpp  TestMVP.ipynb  TestMaths.cpp  TestMaths.ipynb  TestVec4.cpp
test/VK/: CMakeLists.txt  TestInstance.cpp  TestPhysicalDevice.cpp  TestQueueFamily.cpp  TestVK.cpp  testInstance.cpp  testQueueFamily.cpp
(+507 files in other folders)
